styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

body {
  overflow-x: hidden;
  overflow-y: auto;
}

/* General */
.font-serif {
  font-size: 130%;
  line-height: 65%;
}
.accent-color {
  @apply text-accent;
}

/* Each screen size */
.section {
  @apply min-h-screen lg:py-28 flex flex-col justify-center;
}

/* Typography */
.intro-title {
  @apply lg:text-[10rem] leading-[10rem];
}
.sub {
  @apply lg:text-[5.5rem] leading-[5.5rem];
}
.large-title {
  @apply lg:text-[13rem] leading-[13rem] lg:mb-12 font-serif;
}
.text {
  @apply lg:text-2xl lg:leading-10;
}

.text p {
  @apply lg:mb-8;
}
.text em {
  @apply font-serif;
  font-style: normal;
  font-size: 200%;
}

/* cursor */
.mf-cursor:before {
  background-color: transparent;
  border: 2px solid #4a5cff;
  transform: scale(0.9);
}
.mf-cursor-media {
  width: 350px;
  height: 350px;
  margin: -150px 0 0 -150px;
}
.mf-cursor-text {
}

/* Horizontal scrolling */
.horizontal-container {
  display: flex;
}
.panel {
  width: 100vw;
  flex: 1;
}

